2017-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Remove 'base' from Doxygen
	input directories.

2017-02-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Finally remove last remains of base library.

	* base/, base/CMakeLists.txt. base/README.txt, base/test-hosts.c:
	Removed. The test tool is now in gvm-libs.

	* CMakeLists.txt: Removed base module.

	* COPYING: Removed base module.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "nvticache" is now in gvm-libs/util.

	* base/nvticache.c, base/nvticache.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.

	* COPYING: Remove module from this list.

	* misc/CMakeLists.txt: Drop openvase_base library
	which is not needed anymore.

	* misc/plugutils.c: Include gvm/util/nvticache.h instead
	of ../base/nvticache.h.

	* CMakeLists.txt: Do not configure and install the pc file for base
	library.

	* libopenvas_base.pc.in: Removed. This is not required anymore.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "kb" is now in gvm-libs/util.

	* base/kb_redis.c, base/kb.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.

	* INSTALL: Remove requirement of hiredis.

	* COPYING: Remove module from this list.

	* base/nvticache.c: Include gvm/util/kb.h instead of kb.h.

	* misc/network.c, misc/plugutils.c, misc/plugutils.h,
	misc/www_funcs.c: Include gvm/util/kb.h instead of ../base/kb.h.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/nvt_categories.h (ACT_STRING_*): Removed all these definitions
	as they are not used anywhere anymore. Nasl uses its own table
	of strings.

2017-02-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/arglists.h: Move Doxygen mainpage configuration here now that
	nasl/nasl.h has moved to openvas-scanner.

2017-02-14  Juan Jose Nicola  <juan.nicola@greenbone.net>
